<resources>
    <string name="app_name">Baseball Bee</string>

    <string name="success">Success</string>
    <string name="reset_password_mesage">A reset Password link has been sent to your registered email address.</string>
    <string name="okay">Okay</string>
    <string name="pitcher">Pitcher</string>
    <string name="catcher">Catcher</string>
    <string name="first_base">First Base</string>
    <string name="second_base">Second Base</string>
    <string name="third_base">Third Base</string>
    <string name="short_step">Short Step</string>
    <string name="center_field">Center Field</string>
    <string name="left_field">Left Field</string>
    <string name="right_field">Right Field</string>
    <string name="defensive_situation">Defensive Situation</string>
    <string name="Home">Home</string>
    <string name="home_toolbar">Home</string>
    <string name="buzz_feed">Get Buzzed</string>
    <string name="buzz_feed_title">Buzz Feed</string>
    <string name="training_videos">Training Videos</string>
    <string name="my_friends">My Friends</string>
    <string name="mesages">Messages</string>
    <string name="teams">Teams</string>
    <string name="challenges">Challenges</string>
    <string name="leaderboards">Leaderboard</string>
    <string name="mystats">My Stats</string>
    <string name="my_profile">My Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="title">Title</string>
    <string name="dummy_content">"Lorem Ipsum is simply dummy text of the print abc and typesetting industry. Lorem Ipsum has been the industry's standard.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard. \nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard."</string>
    <string name="dummy_content_short">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. "</string>
    <string name="situation_name">Situation Name</string>
    <string name="pitch">Pitch</string>
    <string name="question1">Question 1</string>
    <string name="question4">Question 4</string>
    <string name="think_about">Also think about it</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option4">Option 4</string>
    <string name="option3">Option 3</string>
    <string name="correctAnswer">Correct Answer</string>
    <string name="next">Next</string>
    <string name="score">Score:\u0020 300</string>
    <string name="average">Average:\u0020 50%</string>
    <string name="total_questions">Total Questions</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="incorrect_answers">Incorrect Answers</string>
    <string name="done">Done</string>
    <string name="you_are">You are</string>
    <string name="outs">Outs</string>
    <string name="runners_on">Runners On</string>
    <string name="game_summary">Game Summary</string>
    <string name="buzz_feed_details">Buzz Feed Details</string>
    <string name="users">Users</string>
    <string name="player">Player</string>
    <string name="dob">Born on: 8/Aug/2020</string>
    <string name="badges_earned">Badges Earned</string>
    <string name="user_profile">User Profile</string>
    <string name="challenge_type">Challenge Type</string>
    <string name="time_text">27 Aug 2020, 11:18 PM</string>
    <string name="accept">Accept</string>
    <string name="challenge_title">Challenge Title</string>
    <string name="select_challenge_type">Select Challenge Type</string>
    <string name="select_date">Select Date and Time</string>
    <string name="select_user">Select User</string>
    <string name="create">Create</string>
    <string name="my_challenges">My Challenges</string>
    <string name="challenge_requests">Challenge Requests</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="create_challenge">Create Challenge</string>
    <string name="cancel_challenge">Cancel Challenge</string>
    <string name="user_name">Kiara Roy</string>
    <string name="submit">Submit</string>
    <string name="challenge">Challenge</string>
    <string name="challenge_submitted">Challenge submitted successfully.</string>
    <string name="challenge_created">Challenge created successfully.</string>
    <string name="create_team">Create Team</string>
    <string name="players">Players</string>
    <string name="weekly_leaderboard">Weekly Leaderboard</string>
    <string name="change_password">Change Password</string>
    <string name="viewProfile">View Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="my_teams">My Teams</string>
    <string name="log_out">Logout</string>
    <string name="log_out_message">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update">Update</string>
    <string name="info_password">You need to login again\nonce you update password.</string>
    <string name="badge_name">Badge Name</string>
    <string name="work_gym">Work Gym</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="info_forgot_password">Please enter your registered email address.\nA reset password link will be sent to you.</string>
    <string name="send">Send</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="register">Register</string>
    <string name="register_message">You have successfully registered with Baseball Bee and Bee more fit!</string>
    <string name="updated_message">You have been successfully updated with Baseball Bee.</string>
    <string name="team_created">Team created successfully.</string>
    <string name="enter_message">Enter Message</string>
    <string name="contact_us_message">Thank you for contacting us. We will reach you out shortly.</string>
    <string name="password_message">Password has been updated successfully. Please login again.</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="txt_signup_1">Don\'t have an account?</string>
    <string name="situations">Situations</string>
    <string name="update_profile_message">You have been successfully updated with Baseball Bee.</string>
    <string name="team_player">Team player</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="select_user_type">Select User Type</string>
    <string name="name">Name</string>
    <string name="Enter_your_name">Please enter name.</string>
    <string name="Enter_your_email">Please enter email address.</string>
    <string name="Enter_your_date_birth">Please select date of birth.</string>
    <string name="Select_User_type">Please select user type.</string>
    <string name="Enter_passowrd">Please enter password.</string>
    <string name="Enter_confirm_password">Please enter confirm password.</string>
    <string name="password_Size">Password must be at least 6 characters long.</string>
    <string name="Enter_same_password">Password and confirm password doesn\'t match.</string>

    <!--API Error Msg-->
    <string name="something_went_wrong">Oh.. something went wrong.</string>
    <string name="connectErr">Failed to connect to server. Please check your internet connection.</string>
    <string name="timeoutErr">Failed to connect to server. Please try after sometime.</string>
    <string name="noInternetErr">Please check your internet connection.</string>
    <string name="Enter_email_address">Please enter email address.</string>
    <string name="Enter_password">Please enter password.</string>
    <string name="Valid_Email">Please enter valid email address.</string>
    <string name="password_size">Enter password must be 8 digit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frist_point">\u0020 \u0020 \u0020 Check your Knowledge of 7,000+ Defensive Situations(content included in the free app)</string>
    <string name="third_point">\u0020 \u0020 \u0020  Challenge your real-world teammates to play Games you have played... and track your status on the LeaderBoard</string>
    <string name="second_point">\u0020 \u0020 \u0020  Play Custom Game created by your real-world Coaches</string>
    <string name="get_started">Get Started</string>
    <string name="set_profile">Please set the Profile Picture</string>
    <string name="baseball_bee">Baseball Bee Simulator</string>
    <string name="name_length">Name must be at least 2 characters long.</string>
    <string name="name_length_max">Name should not be greater than 30 characters.</string>
    <string name="unauthenciated">Unauthenticated.</string>
    <string name="No">No</string>
    <string name="send_request">Send Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="id">id</string>
    <string name="challenge_title_empty">Title name should be greater than 2 characters</string>
    <string name="challenge_type_empty">Please select challenge type.</string>
    <string name="date_empty">Please select date and time.</string>
    <string name="select_user_message">Please select users.</string>
    <string name="waiting_for_approval">Waiting For Approval</string>
    <string name="user_id">User_id</string>
    <string name="please_enter_message">Please enter description.</string>
    <string name="user">user_name</string>
    <string name="other_user_id">Other_User_id</string>
    <string name="chat_room_id">chat_room_id</string>
    <string name="challenge_name">Challenge_Name</string>
    <string name="select_video_message">Please upload video</string>
    <string name="request_accept">Request has been accepted successfully.</string>
    <string name="no_badges_found">No badges found...</string>
    <string name="challengers">Challengers</string>
    <string name="user_type_empty">Please select user</string>
    <string name="no_data_found">No data found...</string>
    <string name="no_challenges_found_yet_create_new_challenges_to_earn_badges">No challenges found yet,\ncreate new challenges to earn badges</string>
    <string name="challenge_title_empty_team">Name must be at leat 2 characters long.</string>
    <string name="challenge_title_empty_message">Please enter challenge title.</string>
    <string name="challenge_title_validation_message">Challenge title should be at least 2 characters long.</string>
    <string name="description">description</string>
    <string name="error">Error</string>
    <string name="cancel_challenge_message">Are you sure you want to cancel the challenge?</string>
    <string name="new_challenge">new_challenge</string>
    <string name="no_friends">No friends</string>
    <string name="Questions_not_available">Questions not available.</string>
    <string name="enter_message_validation">Please enter message.</string>
    <string name="internet_alert">Your internet connection appears to be offline. Please try again.</string>
    <string name="video_upload_duration_limit">Please upload the video of less than 1 minute.</string>
    <string name="video_size">Video size should not be greater than 50 MB.</string>

</resources>
