<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/margin_10"
    android:layout_marginBottom="@dimen/margin_10"
    app:cardBackgroundColor="@color/question_card_bg"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_20"
        android:paddingTop="@dimen/margin_10"
        android:paddingEnd="@dimen/margin_20"
        android:paddingBottom="@dimen/margin_10"
        android:background="@color/question_card_bg">


        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/century_gothic_bold"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/yellow"
            android:textSize="@dimen/px40"
            android:text="@string/question1"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="0dp"
            android:id="@+id/description"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/century_gothic"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:textColor="@color/text_Color_drawer_item"
            android:textSize="@dimen/px40"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/dummy_content_short"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/thinktext"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/century_gothic_bold"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:textColor="@color/yellow"
            android:textSize="@dimen/px40"
            android:text="@string/think_about"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="0dp"
            android:id="@+id/thinkDescription"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/century_gothic"
            app:layout_constraintTop_toBottomOf="@id/thinktext"
            android:textColor="@color/text_Color_drawer_item"
            android:textSize="@dimen/px40"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/dummy_content_short"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/option1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_30"
            android:text="@string/option1"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/century_gothic_bold"
            android:textColor="@color/black"
            android:background="@drawable/btn_bg"
            android:paddingStart="@dimen/margin_30"
            android:paddingEnd="@dimen/margin_30"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:textSize="@dimen/px60"
            app:layout_constraintTop_toBottomOf="@id/thinkDescription"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_30"
            android:text="@string/option2"
            android:id="@+id/option2"

            android:backgroundTint="@color/grey"
            android:fontFamily="@font/century_gothic_bold"
            android:textColor="@color/black"
            android:background="@drawable/btn_bg"
            android:paddingStart="@dimen/margin_30"
            android:paddingEnd="@dimen/margin_30"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:textSize="@dimen/px60"
            app:layout_constraintTop_toBottomOf="@id/thinkDescription"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_20"
            android:id="@+id/option3"
            android:text="@string/option3"
            android:backgroundTint="@color/grey"
            android:fontFamily="@font/century_gothic_bold"
            android:textColor="@color/black"
            android:background="@drawable/btn_bg"
            android:paddingStart="@dimen/margin_30"
            android:paddingEnd="@dimen/margin_30"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:textSize="@dimen/px60"
            app:layout_constraintTop_toBottomOf="@id/option1"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/option4"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/option4"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/century_gothic_bold"
            android:textColor="@color/black"
            android:background="@drawable/btn_bg"
            android:paddingStart="@dimen/margin_30"
            android:paddingEnd="@dimen/margin_30"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:textSize="@dimen/px60"
            app:layout_constraintTop_toBottomOf="@id/option2"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/correctAnswer"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/correctAnswer"
            android:fontFamily="@font/century_gothic_bold"
            android:textColor="@color/green"
            android:paddingEnd="@dimen/margin_20"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:textSize="@dimen/px40"
            app:layout_constraintTop_toBottomOf="@id/option3"
            android:layout_height="wrap_content"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>