<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="viewModel"
            type="com.brian.viewModels.register.RegisterViewModel" />

        <variable
            name="clickHandler"
            type="com.brian.views.fragments.MyProfileFragment.ClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/blackTheme"
        android:layout_height="match_parent">



        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:id="@+id/startGuide"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:id="@+id/endGuide"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97"
            android:layout_height="wrap_content"/>


        <ScrollView
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="@id/startGuide"
            app:layout_constraintEnd_toEndOf="@id/endGuide"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/viewProfile"
                    android:text="@string/viewProfile"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/century_gothic_bold"
                    android:textSize="@dimen/px60"
                    android:layout_marginTop="@dimen/margin_20"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/btn_bg"
                    android:layout_height="@dimen/profile_btn_size"/>

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/editProfile"
                    android:text="@string/editProfile"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/century_gothic_bold"
                    android:textSize="@dimen/px60"
                    android:layout_marginTop="@dimen/margin_20"
                    app:layout_constraintTop_toBottomOf="@id/viewProfile"
                    android:background="@drawable/btn_bg"
                    android:layout_height="@dimen/profile_btn_size"/>

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/changePassword"
                    android:text="@string/change_password"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/century_gothic_bold"
                    android:textSize="@dimen/px60"
                    android:layout_marginTop="@dimen/margin_20"
                    app:layout_constraintTop_toBottomOf="@id/editProfile"
                    android:background="@drawable/btn_bg"
                    android:layout_height="@dimen/profile_btn_size"/>

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/myChallenges"
                    android:text="@string/my_challenges"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/century_gothic_bold"
                    android:textSize="@dimen/px60"
                    android:layout_marginTop="@dimen/margin_20"
                    app:layout_constraintTop_toBottomOf="@id/changePassword"
                    android:background="@drawable/btn_bg"
                    android:layout_height="@dimen/profile_btn_size"/>

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/badgesEarned"
                    android:text="@string/badges_earned"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/century_gothic_bold"
                    android:textSize="@dimen/px60"
                    android:layout_marginTop="@dimen/margin_20"
                    app:layout_constraintTop_toBottomOf="@id/myChallenges"
                    android:background="@drawable/btn_bg"
                    android:layout_height="@dimen/profile_btn_size"/>

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/myTeams"
                    android:text="@string/my_teams"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/century_gothic_bold"
                    android:textSize="@dimen/px60"
                    android:layout_marginTop="@dimen/margin_20"
                    app:layout_constraintTop_toBottomOf="@id/badgesEarned"
                    android:background="@drawable/btn_bg"
                    android:layout_height="@dimen/profile_btn_size"/>

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/logout"
                    android:text="@string/log_out"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/century_gothic_bold"
                    android:textSize="@dimen/px60"
                    android:layout_marginTop="@dimen/margin_20"
                    app:layout_constraintTop_toBottomOf="@id/myTeams"
                    android:background="@drawable/btn_bg"
                    android:layout_height="@dimen/profile_btn_size"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
