<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">


    <ImageView
        android:id="@+id/iSuccess"
        android:layout_width="@dimen/margin_50"
        android:layout_height="@dimen/margin_50"
        android:layout_marginTop="@dimen/margin_20"
        android:src="@drawable/alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:fontFamily="@font/century_gothic_bold"
        android:text="@string/log_out"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/px50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iSuccess"></TextView>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:fontFamily="@font/century_gothic"
        android:text="@string/log_out_message"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/px45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"></TextView>


    <TextView
        android:id="@+id/btNo"
        android:layout_width="@dimen/margin_80"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@drawable/bt_bg_dialog"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/century_gothic_bold"
        android:gravity="center"
        android:paddingLeft="@dimen/margin_20"
        android:paddingTop="@dimen/margin_7"
        android:paddingRight="@dimen/margin_20"
        android:paddingBottom="@dimen/margin_7"
        android:text="@string/no"
        android:textColor="@android:color/black"
        android:textSize="@dimen/px50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/description"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <TextView
        android:id="@+id/btYes"
        android:layout_width="@dimen/margin_80"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@drawable/bt_bg_dialog"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/century_gothic_bold"
        android:gravity="center"
        android:paddingLeft="@dimen/margin_20"
        android:paddingTop="@dimen/margin_7"
        android:paddingRight="@dimen/margin_20"

        android:paddingBottom="@dimen/margin_7"
        android:text="@string/yes"
        android:textColor="@android:color/black"
        android:textSize="@dimen/px50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/description"
        app:layout_constraintTop_toBottomOf="@id/description" />


</androidx.constraintlayout.widget.ConstraintLayout>