<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="viewModel"
            type="com.brian.viewModels.register.RegisterViewModel" />

        <variable
            name="clickHandler"
            type="com.brian.views.fragments.ChangePasswordFragment.ClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackTheme">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <TextView
            android:layout_width="0dp"
            android:id="@+id/text"
            android:text="@string/info_password"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/px45"
            android:fontFamily="@font/century_gothic"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintEnd_toEndOf="@id/endGuide"
            app:layout_constraintStart_toStartOf="@id/startGuide"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/margin_40"
            android:fontFamily="@font/century_gothic"
            android:background="@drawable/edit_text_bg"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/margin_10"
            android:hint="@string/old_password"
            android:textSize="@dimen/px55"
            android:paddingStart="@dimen/margin_20"
            android:textColorHint="#7e7e7e"
            app:layout_constraintEnd_toEndOf="@id/endGuide"
            app:layout_constraintStart_toStartOf="@id/startGuide"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/edit_text_bg"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/margin_10"
            android:textSize="@dimen/px55"
            android:fontFamily="@font/century_gothic"
            android:hint="@string/new_password"
            android:paddingStart="@dimen/margin_20"
            android:textColorHint="#7e7e7e"
            app:layout_constraintEnd_toEndOf="@id/endGuide"
            app:layout_constraintStart_toStartOf="@id/startGuide"
            app:layout_constraintTop_toBottomOf="@id/oldPassword" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/edit_text_bg"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/margin_10"
            android:hint="@string/confirm_new_password"
            android:paddingStart="@dimen/margin_20"
            android:textSize="@dimen/px55"
            android:fontFamily="@font/century_gothic"
            android:textColorHint="#7e7e7e"
            app:layout_constraintEnd_toEndOf="@id/endGuide"
            app:layout_constraintStart_toStartOf="@id/startGuide"
            app:layout_constraintTop_toBottomOf="@id/newPassword" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_80"
            android:background="@drawable/capsuler_login_btn"
            android:fontFamily="@font/century_gothic_bold"
            android:onClick="@{()-> clickHandler.onCreateClick()}"
            android:gravity="center"
            android:textSize="@dimen/px60"
            android:text="@string/update"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/confirmPassword"
            app:layout_constraintEnd_toEndOf="@id/endGuide"
            app:layout_constraintStart_toStartOf="@id/startGuide" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
